Fix broken style

--- a/css/markdown-styles.css
+++ b/css/markdown-styles.css
@@ -33,13 +33,13 @@
   padding: 10px 80px; 
 }
 
-.markdown > div > ul {
+.markdown > div > div > ul {
   list-style-type: none;
 }
-.markdown > div > ul > li {
+.markdown > div > div > ul > li {
   margin-bottom: 5px;
 }
-.markdown > div > ul > li:before {
+.markdown > div > div > ul > li:before {
   content: "➔";
   margin-left: -1.3em;
   width: 1.3em;
